# s3-signed-func

./: .gitignore  Makefile  handler.py  package-lock.json  package.json  pylintrc  pyproject.toml  serverless.yml
.devcontainer/: devcontainer.json
