[tool.poetry]
name = "s3-signed-func"
version = "0.1.0"
description = ""
authors = ["ricepotato <sukjun40@naver.com>"]
readme = "README.md"
packages = [{include = "s3_signed_func"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.59"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
mypy = "^0.991"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
